faceboook mass unfirend and tiktok mass unfollow

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
 	"content_scripts": [
 	  {
 		 "matches": ["https://www.facebook.com/*"],
-		 "js": ["content.js"]
+		 "js": ["unfriend.js","unfollow.js"]
 	  }
 	]
  }
